# piedpiper

./: .gitignore  README.md  cnn_compress.py  fixes.txt  loss_func.py  modal_train.py  requirements.txt  setup.sh  stream_processing.py  train.py  train_helpers.py
app/: spec.md
app/docs/: README.md  quickstart.md  runbook.md
app/docs/examples/: quickstart.py
app/inference/: __init__.py  api.py  auth.py  image_pipeline.py  modal_app.py  router.py  runtime.py  schemas.py  text_pipeline.py  video_pipeline.py  video_spec.md
app/inference/tests/: test_api.py  test_video_pipeline.py
app/packaging/: README.md  pyproject.toml
app/packaging/src/pied_piper/: __init__.py  client.py  config.py  exceptions.py  inputs.py  models.py
app/packaging/tests/: test_client.py  test_inputs.py
custom_cnn_compress/: cnn_compress.py  modal_inference.py  modal_train.py  train_helpers.py
docs/examples/: piedpiper_openai_quickstart.py
docusaurus/: README.md  docusaurus.config.ts  package-lock.json  sidebars.ts
docusaurus/docs/: index.md
docusaurus/src/css/: custom.css
eval/: eval_loop.py
eval/results/: dependency-check_config.json  mmlu-pro-1200-f08.jsonl  mmlu-pro-1200-f08_config.json  mmlu-pro-1200-f08_summary.json  mmlu-pro-1200-f09.jsonl  mmlu-pro-1200-f09_config.json  mmlu-pro-1200-f09_summary.json  mmlu-pro-1200-f10.jsonl  mmlu-pro-1200-f10_config.json  mmlu-pro-1200-f10_summary.json  structured-smoke_config.json
experimetal-token-compression/: inference.py
fast_bert/: bert_upload.py  fast_bert_train.py
landing-page/: index.html  piedpiper-landing.html
