[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "piedpiper-sdk"
version = "0.1.0"
description = "Python SDK for Pied Piper multimodal compression"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Pied Piper" }]
dependencies = ["httpx>=0.27,<1.0"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pied_piper*"]
namespaces = false

[tool.setuptools.package-data]
pied_piper = ["py.typed"]

